--- a/Progress Steps/index.html
+++ b/Progress Steps/index.html
@@ -13,16 +13,30 @@
   </head>
   <body>
 
+    <div class="header">
+        <h1>Progress Steps</h1>
+    </div>
+
+
+    <div id="all">
+
         <div id="app">
-            <div id="c1"></div>
+            <div id="c1" class="c1"></div>
             <div id="l1" class="l1"></div>
             <div id="c2" class="c2"></div>
             <div id="l2" class="l2"></div>
             <div id="c3" class="c3"></div>
         </div>
 
-        <input type="submit" id= "btn" value="Progress" onclick=addCount()>
-        <input type="submit" id= "btn1" value="Back" onclick=decCount()>
+        <div id="control">
+            <input type="submit" id= "btn" value="Progress" onclick=addCount()>
+            <input type="submit" id= "btn1" value="Back" onclick=decCount()>
+        </div>
+
+    </div>
+
+
+
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
@@ -36,27 +50,27 @@
         btn1.addEventListener('click', decCount());
 
         function addCount(){
-            console.log(clicked);
-            if(clicked == 2){
+            if(clicked == 1){
                 document.getElementById('l1').classList.add("active");
             }
-            if(clicked == 3){
+            if(clicked == 2){
                 document.getElementById('c2').classList.add("active");
             }
-            if(clicked == 4){
+            if(clicked == 3){
                 document.getElementById('l2').classList.add("active");
             }
-            if(clicked == 5){
+            if(clicked == 4){
                 document.getElementById('c3').classList.add("active");
             }
 
             clicked++;
-
+            if(clicked >= 6){
+                decCount();
+            }
         }
 
         function decCount(){
             clicked--;
-            console.log(clicked);
             if(clicked == 1){
                 document.getElementById('l1').classList.remove("active");
             }
@@ -66,6 +80,9 @@
                 document.getElementById('l2').classList.remove("active");
             } if(clicked == 4){
                 document.getElementById('c3').classList.remove("active");
+            }
+            if(clicked == 0){
+                addCount();
             }
         }
 
