--- a/fixed-navbar/index.html
+++ b/fixed-navbar/index.html
@@ -57,6 +57,7 @@
     </div>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
     <script>
         let navbar = document.getElementById('navbar');
