--- a/Dad Jokes/index.html
+++ b/Dad Jokes/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="style.css">
 
     <title>Document</title>
 </head>
@@ -49,6 +50,11 @@
         <input type="button" id="btn" value = "Click Here for Joke!">
         <div id="demo"></div>
     </div>
+    
+
+    <script src="script.js"></script>
+
+    
 </body>
 <script>
     document.getElementById('btn').addEventListener('click', joke);
