--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <link rel="stylesheet" href="style.css">
-    <title>The Password Strength Background</title>
+    <title>Pokedex</title>
 </head>
 
 <body>
