--- a/kinetic-loader/index.html
+++ b/kinetic-loader/index.html
@@ -18,6 +18,8 @@
     <div id="app" class="app">
         <div class="triangle-down"></div>
         <div class="triangle-up"></div>
+        <div class="triangle-down"></div>
+        <div class="triangle-up"></div>
     </div>
 
 
