--- a/live-user-filter/index.html
+++ b/live-user-filter/index.html
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <link rel="stylesheet" href="style.css">
-    <title>Kinetic Loader</title>
+    <title>The Live User Filter</title>
 </head>
 
 <body>
 
-
+<div class="header">
+    <h1>The Live User Filter</h1>
+</div>
 
     <div id="app" class="app">
-        <input type="search">
+        <input type="search" id="filter">
        <ul id="output"></ul>
     </div>
 
