--- a/image-carousel/v1/index.html
+++ b/image-carousel/v1/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <link rel="stylesheet" href="style.css">
-    <title>Background Slider</title>
+    <title>Image Carousel</title>
 </head>
 <body>
 
