--- a/drawing-app/index.html
+++ b/drawing-app/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha38`4-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <link rel="stylesheet" href="style.css">
-    <title>Quiz App</title>
+    <title>Drawing App</title>
 </head>
 <body>
 
